--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/seansite-tailwind/img/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sean Long - Professional Quality Leader</title>
     <link
@@ -31,8 +31,8 @@
     <!-- Nepcha Analytics (nepcha.com) -->
     <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
     <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
-    <script type="module" crossorigin src="/seansite-tailwind/assets/index.126db413.js"></script>
-    <link rel="stylesheet" href="/seansite-tailwind/assets/index.b11189f6.css">
+    <script type="module" crossorigin src="/assets/index.126db413.js"></script>
+    <link rel="stylesheet" href="/assets/index.00cc2486.css">
   </head>
   <body>
     <div id="root"></div>
